force-app/main/default/objects/AccountAddress__c/AccountAddress__c.object-meta.xml
<CustomObject>
    <label>Account Address</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>