force-app/main/default/objects/AccountAddress__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account of the adress</description>
    <inlineHelpText>select a account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Adresses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>