force-app/main/default/objects/AccountAddress__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>The city address</description>
    <inlineHelpText>Write the addres name</inlineHelpText>
    <label>Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>