force-app/main/default/objects/AccountAddress__c/fields/CEP__c.field-meta.xml
<CustomField>
    <fullName>CEP__c</fullName>
    <description>Address number</description>
    <inlineHelpText>write the number</inlineHelpText>
    <label>CEP</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>