force-app/main/default/objects/AccountAddress__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Wich city is the Account Adress</description>
    <inlineHelpText>Choose a city</inlineHelpText>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipName>Account_Adresses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>