force-app/main/default/objects/AccountAddress__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>The Account Address code</description>
    <inlineHelpText>write the code</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>