force-app/main/default/objects/AccountAddress__c/fields/neighborhood__c.field-meta.xml
<CustomField>
    <fullName>neighborhood__c</fullName>
    <description>neighborhood name</description>
    <inlineHelpText>write the name</inlineHelpText>
    <label>Neighborhood</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>